--- a/GB_Service/GB_Service.vcxproj
+++ b/GB_Service/GB_Service.vcxproj
@@ -148,13 +148,13 @@
     <ClCompile Include="HttpDigest.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="EventHandler.cpp" />
-    <ClCompile Include="MD5.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RequestPool.cpp" />
     <ClCompile Include="SipRequest.cpp" />
     <ClCompile Include="SipEvent.cpp" />
     <ClCompile Include="SipServer.cpp" />
@@ -166,8 +166,8 @@
     <ClInclude Include="EventHandlerManager.h" />
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="HttpDigest.h" />
-    <ClInclude Include="MD5.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="RequestPool.h" />
     <ClInclude Include="SipRequest.h" />
     <ClInclude Include="SipEvent.h" />
     <ClInclude Include="SipServer.h" />
