当先收到心跳包时，返回401

--- a/GB_Service/GB_Service.vcxproj
+++ b/GB_Service/GB_Service.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="SSRC_Config.cpp" />
     <ClCompile Include="StreamManager.cpp" />
     <ClCompile Include="XmlParser.cpp" />
+    <ClCompile Include="ZlmServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConfigManager.h" />
@@ -180,6 +181,7 @@
     <ClInclude Include="StreamManager.h" />
     <ClInclude Include="Structs.h" />
     <ClInclude Include="XmlParser.h" />
+    <ClInclude Include="ZlmServer.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\base\base.vcxproj">
