--- a/GB_Service/GB_Service.vcxproj.filters
+++ b/GB_Service/GB_Service.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="ZlmServer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="DTO.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -117,6 +120,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="ZlmServer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DTO.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
