--- a/GB_Service/GB_Service.vcxproj
+++ b/GB_Service/GB_Service.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{82cf9d1a-a13a-4eda-a85e-1d49be718048}</ProjectGuid>
     <RootNamespace>GBService</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>GB28181_Service</ProjectName>
+    <ProjectName>SipService</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -72,8 +72,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>..\depends\crow;E:\OpenSource\Repository_x64\boost182\include\boost-1_82;..\depends\oatpp\include\oatpp-1.3.0\oatpp-swagger;..\depends\oatpp\include\oatpp-1.3.0\oatpp-curl;..\depends\oatpp\include\oatpp-1.3.0\oatpp;..\depends\curl\include;..\depends\ZLTookit\include;..\depends\json;..\depends\boost-1.75\include;..;..\depends\cpprestsdk\include;..\depends\magic_enum;..\depends\pugixml;..\depends\glog\include;..\depends\fmt\include;..\depends\sip\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\OpenSource\Repository_x64\boost182\lib;..\depends\oatpp\lib\oatpp-1.3.0\debug;..\depends\curl\lib;..\depends\ZLTookit\lib\debug;..\depends\boost-1.75\lib;..\depends\cpprestsdk\lib;..\depends\pugixml;..\depends\glog\lib;..\depends\fmt\lib;..\depends\openssl\debug;..\depends\sip\lib\debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\depends\cpr\include;..;..\depends\crow;E:\OpenSource\Repository_x64\boost182\include\boost-1_82;..\depends\curl\include;..\depends\ZLTookit\include;..\depends\json;..\depends\boost-1.75\include;..\depends\cpprestsdk\include;..\depends\magic_enum;..\depends\pugixml;..\depends\glog\include;..\depends\fmt\include;..\depends\sip\include;$(IncludePath)</IncludePath>
+    <LibraryPath>..\depends\cpr\lib;E:\OpenSource\Repository_x64\boost182\lib;..\depends\oatpp\lib\oatpp-1.3.0\debug;..\depends\curl\lib;..\depends\ZLTookit\lib\debug;..\depends\boost-1.75\lib;..\depends\cpprestsdk\lib;..\depends\pugixml;..\depends\glog\lib;..\depends\fmt\lib;..\depends\openssl\debug;..\depends\sip\lib\debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -144,6 +144,7 @@
     <ClCompile Include="ConfigManager.cpp" />
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="DeviceManager.cpp" />
+    <ClCompile Include="DTO.cpp" />
     <ClCompile Include="EventHandlerManager.cpp" />
     <ClCompile Include="HttpDigest.cpp" />
     <ClCompile Include="HttpServer.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="ConfigManager.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="DeviceManager.h" />
+    <ClInclude Include="DTO.h" />
     <ClInclude Include="EventHandlerManager.h" />
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="HttpDigest.h" />
