--- a/SipService/SipService.vcxproj
+++ b/SipService/SipService.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b6eac6c7-1f8b-44e8-8edb-4a6ddb0ee80d}</ProjectGuid>
+    <ProjectGuid>{82cf9d1a-a13a-4eda-a85e-1d49be718048}</ProjectGuid>
     <RootNamespace>SipService</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>SipService</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -70,6 +71,14 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>..\depends\cpr\include;..;..\depends\crow;E:\OpenSource\Repository_x64\boost182\include\boost-1_82;..\depends\curl\include;..\depends\ZLTookit\include;..\depends\json;..\depends\boost-1.75\include;..\depends\cpprestsdk\include;..\depends\magic_enum;..\depends\pugixml;..\depends\glog\include;..\depends\fmt\include;..\depends\sip\include;$(IncludePath)</IncludePath>
+    <LibraryPath>..\depends\cpr\lib;E:\OpenSource\Repository_x64\boost182\lib;..\depends\oatpp\lib\oatpp-1.3.0\debug;..\depends\curl\lib;..\depends\ZLTookit\lib\debug;..\depends\boost-1.75\lib;..\depends\cpprestsdk\lib;..\depends\pugixml;..\depends\glog\lib;..\depends\fmt\lib;..\depends\openssl\debug;..\depends\sip\lib\debug;$(LibraryPath)</LibraryPath>
+    <IntDir>$(SolutionDir)tmp\$(PlatformName)\$(ProjectName)\$(Configuration)\</IntDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IntDir>$(SolutionDir)tmp\$(PlatformName)\$(ProjectName)\$(Configuration)\</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -105,11 +114,12 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -135,16 +145,54 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ConfigManager.cpp" />
+    <ClCompile Include="Device.cpp" />
+    <ClCompile Include="DeviceManager.cpp" />
+    <ClCompile Include="DTO.cpp" />
+    <ClCompile Include="EventHandlerManager.cpp" />
+    <ClCompile Include="HttpDigest.cpp" />
+    <ClCompile Include="HttpServer.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="EventHandler.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="SipService.cpp" />
+    <ClCompile Include="RequestPool.cpp" />
+    <ClCompile Include="SipRequest.cpp" />
+    <ClCompile Include="SipEvent.cpp" />
+    <ClCompile Include="SipServer.cpp" />
+    <ClCompile Include="SSRC_Config.cpp" />
+    <ClCompile Include="StreamManager.cpp" />
+    <ClCompile Include="XmlParser.cpp" />
+    <ClCompile Include="ZlmServer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConfigManager.h" />
+    <ClInclude Include="Device.h" />
+    <ClInclude Include="DeviceManager.h" />
+    <ClInclude Include="DTO.h" />
+    <ClInclude Include="EventHandlerManager.h" />
+    <ClInclude Include="EventHandler.h" />
+    <ClInclude Include="HttpDigest.h" />
+    <ClInclude Include="HttpServer.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="RequestPool.h" />
+    <ClInclude Include="SipRequest.h" />
+    <ClInclude Include="SipEvent.h" />
+    <ClInclude Include="SipServer.h" />
+    <ClInclude Include="SSRC_Config.h" />
+    <ClInclude Include="StreamManager.h" />
+    <ClInclude Include="Structs.h" />
+    <ClInclude Include="XmlParser.h" />
+    <ClInclude Include="ZlmServer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\base\base.vcxproj">
+      <Project>{8d9a6595-717a-41c8-b468-0011a72be3d1}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
