--- a/SipService/SipService.vcxproj
+++ b/SipService/SipService.vcxproj
@@ -160,6 +160,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="PtzCmd.cpp" />
     <ClCompile Include="RequestPool.cpp" />
     <ClCompile Include="SipRequest.cpp" />
     <ClCompile Include="SipEvent.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="HttpDigest.h" />
     <ClInclude Include="HttpServer.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PtzCmd.h" />
     <ClInclude Include="RequestPool.h" />
     <ClInclude Include="SipRequest.h" />
     <ClInclude Include="SipEvent.h" />
