--- a/SipService/SipService.vcxproj.filters
+++ b/SipService/SipService.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="DTO.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="PtzCmd.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -123,6 +126,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="DTO.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="PtzCmd.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
