--- a/SipService/SipService.vcxproj.filters
+++ b/SipService/SipService.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="Utils.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="DbManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -135,6 +138,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Utils.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DbManager.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
