--- a/base/base.vcxproj
+++ b/base/base.vcxproj
@@ -19,10 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\build\build_config.h" />
-    <ClInclude Include="..\build\winsdk_config.h" />
-    <ClInclude Include="..\build\xp_style_manifest_win.h" />
     <ClInclude Include="base.h" />
+    <ClInclude Include="base_config.h" />
     <ClInclude Include="base_types.h" />
     <ClInclude Include="callback\callback.h" />
     <ClInclude Include="encrypt\des.h" />
@@ -31,50 +29,23 @@
     <ClInclude Include="error.h" />
     <ClInclude Include="file\file_path.h" />
     <ClInclude Include="file\file_util.h" />
-    <ClInclude Include="framework\default_message_pump.h" />
-    <ClInclude Include="framework\message_loop.h" />
-    <ClInclude Include="framework\message_loop_proxy.h" />
-    <ClInclude Include="framework\message_pump.h" />
-    <ClInclude Include="framework\observer_list.h" />
-    <ClInclude Include="framework\task.h" />
-    <ClInclude Include="framework\win_io_message_pump.h" />
-    <ClInclude Include="framework\win_message_pump.h" />
-    <ClInclude Include="framework\win_ui_message_pump.h" />
     <ClInclude Include="hardware\cpu.h" />
     <ClInclude Include="macros.h" />
     <ClInclude Include="memory\blockbuffer.h" />
     <ClInclude Include="memory\lazy_instance.h" />
     <ClInclude Include="memory\deleter.h" />
     <ClInclude Include="memory\singleton.h" />
-    <ClInclude Include="network\network_util.h" />
-    <ClInclude Include="network\nio_base.h" />
     <ClInclude Include="port.h" />
-    <ClInclude Include="synchronization\lock.h" />
-    <ClInclude Include="synchronization\semaphore.h" />
-    <ClInclude Include="synchronization\waitable_event.h" />
-    <ClInclude Include="third_party\chrome\atomicops.h" />
-    <ClInclude Include="third_party\chrome\atomicops_internals_arm_gcc.h" />
-    <ClInclude Include="third_party\chrome\atomicops_internals_atomicword_compat.h" />
-    <ClInclude Include="third_party\chrome\atomicops_internals_x86_gcc.h" />
-    <ClInclude Include="third_party\chrome\atomicops_internals_x86_macosx.h" />
-    <ClInclude Include="third_party\chrome\atomicops_internals_x86_msvc.h" />
     <ClInclude Include="third_party\convert_utf\ConvertUTF.h" />
     <ClInclude Include="third_party\modp_b64\modp_b64.h" />
     <ClInclude Include="third_party\modp_b64\modp_b64_data.h" />
-    <ClInclude Include="thread\framework_thread.h" />
-    <ClInclude Include="thread\thread.h" />
-    <ClInclude Include="thread\thread_local.h" />
-    <ClInclude Include="thread\thread_manager.h" />
     <ClInclude Include="time\time.h" />
-    <ClInclude Include="util\at_exit.h" />
     <ClInclude Include="util\base64.h" />
-    <ClInclude Include="util\cmd_line_args.h" />
     <ClInclude Include="util\string_number_conversions.h" />
     <ClInclude Include="util\string_util.h" />
     <ClInclude Include="util\template_util.h" />
     <ClInclude Include="util\unicode.h" />
     <ClInclude Include="util\valuemap.h" />
-    <ClInclude Include="win32\object_watcher.h" />
     <ClInclude Include="win32\path_util.h" />
     <ClInclude Include="win32\platform_string_util.h" />
     <ClInclude Include="win32\scoped_win_handle.h" />
@@ -87,39 +58,15 @@
     <ClCompile Include="file\file_util.cpp" />
     <ClCompile Include="file\file_util_posix.cpp" />
     <ClCompile Include="file\file_util_win.cpp" />
-    <ClCompile Include="framework\default_message_pump.cpp" />
-    <ClCompile Include="framework\message_loop.cpp" />
-    <ClCompile Include="framework\message_loop_proxy.cpp" />
-    <ClCompile Include="framework\message_pump.cpp" />
-    <ClCompile Include="framework\win_io_message_pump.cpp" />
-    <ClCompile Include="framework\win_message_pump.cpp" />
-    <ClCompile Include="framework\win_ui_message_pump.cpp" />
     <ClCompile Include="hardware\cpu.cpp" />
-    <ClCompile Include="network\network_util.cpp" />
-    <ClCompile Include="synchronization\lock_posix.cpp" />
-    <ClCompile Include="synchronization\lock_win.cpp" />
-    <ClCompile Include="synchronization\semaphore_posix.cpp" />
-    <ClCompile Include="synchronization\semaphore_win.cpp" />
-    <ClCompile Include="synchronization\waitable_event_posix.cpp" />
-    <ClCompile Include="synchronization\waitable_event_win.cpp" />
-    <ClCompile Include="third_party\chrome\atomicops_internals_x86_gcc.cc" />
     <ClCompile Include="third_party\convert_utf\ConvertUTF.c" />
     <ClCompile Include="third_party\modp_b64\modp_b64.cc" />
-    <ClCompile Include="thread\framework_thread.cpp" />
-    <ClCompile Include="thread\thread_local_posix.cpp" />
-    <ClCompile Include="thread\thread_local_win.cpp" />
-    <ClCompile Include="thread\thread_manager.cpp" />
-    <ClCompile Include="thread\thread_posix.cpp" />
-    <ClCompile Include="thread\thread_win.cpp" />
     <ClCompile Include="time\time.cpp" />
     <ClCompile Include="time\time_posix.cpp" />
     <ClCompile Include="time\time_win.cpp" />
-    <ClCompile Include="util\at_exit.cpp" />
     <ClCompile Include="util\base64.cpp" />
-    <ClCompile Include="util\cmd_line_args.cpp" />
     <ClCompile Include="util\string_number_conversions.cpp" />
     <ClCompile Include="util\string_util.cpp" />
-    <ClCompile Include="win32\object_watcher.cpp" />
     <ClCompile Include="win32\path_util.cpp" />
     <ClCompile Include="win32\platform_string_util.cpp" />
     <ClCompile Include="win32\security_util.cpp" />
