--- a/SipClient/SipClient.vcxproj.filters
+++ b/SipClient/SipClient.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="FileTime.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="WinApi.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -63,6 +66,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="FileTime.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="WinApi.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
