--- a/.github/workflows/cmake-ubuntu.yml
+++ b/.github/workflows/cmake-ubuntu.yml
@@ -21,7 +21,7 @@ jobs:
         echo "------------------------------- Start -------------------------------"
 
     - name: 安装依赖库
-      run:  apt-get update && apt-get install -y build-essential libssl-dev libcurl4-openssl-dev libc-ares-dev tcl tcl-dev git wget pkg-config
+      run: sudo apt-get update && sudo apt-get install -y build-essential libssl-dev libcurl4-openssl-dev libc-ares-dev tcl tcl-dev git wget pkg-config
 
     - name: 结束
       shell: bash
