--- a/.github/workflows/cmake-ubuntu.yml
+++ b/.github/workflows/cmake-ubuntu.yml
@@ -44,7 +44,7 @@ jobs:
       run: cd opensource && sudo wget https://ftp.gnu.org/gnu/osip/libosip2-5.3.1.tar.gz && sudo tar -zxvf libosip2-5.3.1.tar.gz && cd libosip2-5.3.1 && sudo ./configure && sudo make && sudo make install 
 
     - name: 编译依赖 eXosip
-      run: cd opensource && sudo wget http://download.savannah.nongnu.org/releases/exosip/libexosip2-5.3.0.tar.gz && sudo tar -zxvf libexosip2-5.3.0.tar.gz && cd libexosip2-5.3.0 && sudo ./configure && sudo make CFLAGS="-DNABLE_MAIN_SOCKE=1" && sudo make install 
+      run: cd opensource && sudo wget http://download.savannah.nongnu.org/releases/exosip/libexosip2-5.3.0.tar.gz && sudo tar -zxvf libexosip2-5.3.0.tar.gz && cd libexosip2-5.3.0 && sudo ./configure && sudo make CFLAGS="-DENABLE_MAIN_SOCKET=1" && sudo make install 
 
     - name: 拷贝pc文件
       run: sudo cp libexosip2.pc /usr/local/lib/pkgconfig/libexosip2.pc
