--- a/SipClient/CMakeLists.txt
+++ b/SipClient/CMakeLists.txt
@@ -8,11 +8,10 @@ add_executable(SipClient ${files})
 
 target_link_libraries(SipClient base)
 target_link_libraries(SipClient zltoolkit)
-# target_link_libraries(SipClient fmt)
-# target_link_libraries(SipClient glog)
 target_link_libraries(SipClient pugixml)
 target_link_libraries(SipClient cpr)
 target_link_libraries(SipClient ${Boost_LIBRARIES})
+target_link_libraries(SipClient PkgConfig::sqlite3)
 target_link_libraries(SipClient PkgConfig::osip2)
 target_link_libraries(SipClient PkgConfig::exosip2)
 
